# ldd_tsclib

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
example/: README.md  pubspec.yaml
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: ldd_tsclib.dart  ldd_tsclib_bindings_generated.dart
src/: CMakeLists.txt  ldd_tsclib.c  ldd_tsclib.h
windows/: CMakeLists.txt
